crates/ruff_python_parser/tests/snapshots/invalid_syntax@param_missing_annotation.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
assertion_line: 118
input_file: crates/ruff_python_parser/resources/inline/err/param_missing_annotation.py
---
## AST

```
Module(
    ModModule {
        range: 0..35,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 0..16,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: "foo",
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..11,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..10,
                                parameter: Parameter {
                                    range: 8..10,
                                    name: Identifier {
                                        id: "x",
                                        range: 8..9,
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 13..16,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 13..16,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 17..34,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: "foo",
                        range: 21..24,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 24..29,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 25..27,
                                parameter: Parameter {
                                    range: 25..27,
                                    name: Identifier {
                                        id: "x",
                                        range: 25..26,
                                    },
                                    annotation: None,
                                    convention: AstParamConvention {
                                        ownership: Borrow,
                                        mutability: Immutable,
                                    },
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 31..34,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 31..34,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(x:): ...
  |           ^ Syntax Error: Expected an expression
2 | def foo(x:,): ...
  |


  |
1 | def foo(x:): ...
2 | def foo(x:,): ...
  |           ^ Syntax Error: Expected an expression
  |
